fix logo width to avoid overflow

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
 }
 
 .logo img {
-  height: 50px;
+  max-height: 50px;
 }
 
 .search{
